# parseweb-api

./: .gitignore  README.md  main.py  pyproject.toml
modules/rag/: controller.py  router.py  service.py  validator.py
modules/scraper/: controller.py  router.py  service.py  validator.py
utils/: config.py  constants.py
