[project]
name = "parseweb-api"
version = "0.1.0"
description = ""
authors = [
    {name = "k2lu",email = "rigansust@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
dev = "uvicorn main:app --reload"

[tool.fastapi]
entrypoint = "main:app"